[gd_scene load_steps=7 format=3 uid="uid://cpsduhll555xn"]

[ext_resource type="Script" uid="uid://b7lto8qbvs7ka" path="res://src/screens/title/title_screen.gd" id="1_6utff"]
[ext_resource type="Texture2D" uid="uid://b858j2fj6wioo" path="res://assets/title/sky.png" id="2_tfbb1"]
[ext_resource type="Script" uid="uid://bhundk706jinr" path="res://src/screens/title/baloon_area.gd" id="3_ccq8b"]
[ext_resource type="PackedScene" uid="uid://bink7bsw5fdex" path="res://src/objects/static_balloon/static_balloon.tscn" id="4_55bri"]
[ext_resource type="Texture2D" uid="uid://cvvmsqi2u6h5b" path="res://assets/title/title.png" id="5_q5nsy"]
[ext_resource type="PackedScene" uid="uid://b85vtc22wnoy0" path="res://src/objects/selection_indicator/selection_indicator.tscn" id="6_eybot"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6utff")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tfbb1")

[node name="BaloonArea" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ccq8b")
_baloon_scene = ExtResource("4_55bri")

[node name="Timer" type="Timer" parent="BaloonArea"]
one_shot = true

[node name="Separator" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 0.701961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 120
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 120

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
texture = ExtResource("5_q5nsy")

[node name="MenuContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="SinglePlayer" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TitleScreenButton"
text = "1 Player"
flat = true

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TitleScreenButton"
text = "Options"
flat = true

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TitleScreenButton"
text = "Exit"
flat = true

[node name="SelectionIndicator" parent="." instance=ExtResource("6_eybot")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 400.0
offset_bottom = 70.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="timeout" from="BaloonArea/Timer" to="BaloonArea" method="_on_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/Exit" to="." method="_on_exit_pressed"]
